--- a/src/ui/internal-audit/src/app/views/private/branch-audit/schedule-configuration/schedule-configuration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/schedule-configuration/schedule-configuration.component.html
@@ -268,8 +268,8 @@
                     </div>
                     <div class="col-md-6">
                       <div class="a btn-group" role="group" aria-label="Basic example">
-                        <button [cModalToggle]="verticallyCenteredModalSetDate.id" class="btn btnCreateColor"  cButton > Add </button> 
-                        <button  class="btn btnCreateColor"  cButton (click)="editSetDate(verticallyCenteredModalSetDate.id)">Update</button> 
+                        <!-- <button [cModalToggle]="verticallyCenteredModalSetDate.id" class="btn btnCreateColor"  cButton > Add </button> 
+                        <button  class="btn btnCreateColor"  cButton (click)="editSetDate(verticallyCenteredModalSetDate.id)">Update</button>  -->
                         
                       </div>
                         <!-- <div class="a row">
@@ -283,38 +283,56 @@
                 
                 <br>
                 <br>
-                <div class="row overflow-auto">
-                    <table datatable [dtOptions]="dtOptions[0]" class="table table-bordered row-border hover datatableStyle" style="width: 100%;">
+                <form [formGroup]="scheduleConfigSetDateForm">
+                  <div class="row overflow-auto">
+                    <table datatable [dtOptions]="dtOptions[2]" class="table table-bordered row-border hover datatableStyle" style="width: 100%;">
                       <thead>
                         <tr>
                           <th>SL</th>
-                          <th>Date Type</th>
-                          <th>Set Date</th>
-                         
+                          <th>MileStone</th>
+                          <th>Date</th>
                         </tr>
                       </thead>
-                      <tbody *ngIf="brancheWithRiskOwner?.length != 0">
-                        <tr *ngFor="let branch of brancheWithRiskOwner let i=index" >
+                      <tbody *ngIf="brancheWithActionOwner?.length != 0">
+                        <tr *ngFor="let branch of brancheWithActionOwner let i=index">
                           <td>{{ i+1 }}</td>
                           <td>{{ branch.countryName }}</td>
-                          <td>{{ branch.branchName }}</td>
+                          <td>
+                            <input type="date"   class="form-control" style="max-width: 200px;"  >
+                          </td>
+                         
+                         
                         </tr>
                       </tbody>
-                      <tbody *ngIf="brancheWithRiskOwner?.length == 0">
+                      <tbody *ngIf="brancheWithActionOwner?.length == 0">
                         <tr>
-                          <td colspan="3" class="no-data-available">No data!</td>
+                          <td colspan="5" class="no-data-available">No data!</td>
                         </tr>
                       </tbody>
                     </table>
-      
+                    <div>
+                      <c-col xs="12">
+                        <c-col md>
+                          <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit()">
+                            <svg cIcon name="cilSave" size="md" title="Save Button Icon"></svg> Save
+                          </button>
+                          <button cButton class="btn btn-danger btnCancelColor me-1" (click)="onCancel()">
+                            <svg cIcon name="cilX" size="md" title="Close Button Icon"></svg>Cancel
+                          </button>
+              
+                        </c-col>
+                      </c-col>
+                    </div>
                 </div>
+                </form>
+               
                
               </div>
             </div>
           </div>
         </div>
       </div>
-      <form [formGroup]="scheduleConfigSetDateForm" (ngSubmit)="onSubmitSetDate(verticallyCenteredModalSetDate)" novalidate>
+      <!-- <form [formGroup]="scheduleConfigSetDateForm" (ngSubmit)="onSubmitSetDate(verticallyCenteredModalSetDate)" novalidate>
       <c-modal #verticallyCenteredModalSetDate alignment="center" id="verticallyCenteredModalSetDate">
         <c-modal-header>
           <h5 cModalTitle *ngIf="!formService.isEdit(this.scheduleConfigSetDateForm.get('id'))">Add Action Owner</h5>
@@ -393,7 +411,7 @@
           </button>
         </c-modal-footer>
       </c-modal>
-      </form>
+      </form> -->
     </c-tab-pane>
        
 
