--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/risk-assessment-view.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/risk-assessment-view.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div>
-  <div class="card-body">
+  <!-- <div class="card-body">
     <div class="row m-2">
       <div class="col-6 ml-2">
         <div class="row">
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <c-nav variant="tabs">
   <a [active]="true" [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="0" cNavLink>Overdue</a>
