--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
@@ -264,8 +264,8 @@
       </div>
   </div>
   
-<form [formGroup]="auditPlanForm" (ngSubmit)="onAuditPlanSubmit(verticallyCenteredModalAuditPlan)" novalidate width="100%">
-  <c-modal #verticallyCenteredModalAuditPlan alignment="center" id="verticallyCenteredModalAuditPlan">
+<form [formGroup]="auditPlanForm" (ngSubmit)="onAuditPlanSubmit(verticallyCenteredModalAuditPlan)" novalidate>
+  <c-modal #verticallyCenteredModalAuditPlan alignment="center" id="verticallyCenteredModalAuditPlan" size="lg">
     <c-modal-header>
       <h5 cModalTitle *ngIf="!formService.isEdit(this.auditPlanForm.get('id'))">Create Audit Plan</h5>
       <h5 cModalTitle *ngIf="formService.isEdit(this.auditPlanForm.get('id'))">Update Audit Plan</h5>
